chore: modify dev script to proxy all localhost

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "browser-sync start --proxy \"localhost/scuola/Calcolatrice\" --files \"./Calcolatrice/**/*\""
+        "dev": "browser-sync start --proxy \"localhost\" --files \"./\""
     },
     "keywords": [],
     "author": "",
